--- a/experiment.html
+++ b/experiment.html
@@ -50,17 +50,48 @@
       stimulus: "Welcome to Advertising Experiment",
     };
 
-    var likert_trial_random_order = {
+    var demogarphics;
+
+    var personality_survey = {
       type: "survey-likert",
       questions: [
-        { prompt: "Question 1", labels: scale },
-        { prompt: "Question 2", labels: scale },
-        { prompt: "Question 3", labels: scale },
-        { prompt: "Question 4", labels: scale },
-        { prompt: "Question 5", labels: scale },
+        { prompt: "Am the life of the party", labels: scale },
+        {
+          prompt: "Talk to a lot of different people at parties",
+          labels: scale,
+        },
+        { prompt: "Don't talk a lot", labels: scale },
+        { prompt: "Keep in the background", labels: scale },
+        { prompt: "Sympathize with others' feelings", labels: scale },
+        { prompt: "Feel others' emotions", labels: scale },
+        { prompt: "Am not really interested in others", labels: scale },
+        {
+          prompt: "Am not interested in other people's problems",
+          labels: scale,
+        },
+        { prompt: "Get chores done right away", labels: scale },
+        { prompt: "Like order", labels: scale },
+        {
+          prompt: "Often forget to put things back in their proper place",
+          labels: scale,
+        },
+        { prompt: "Make a mess of things", labels: scale },
+        { prompt: "Have frequent mood swings", labels: scale },
+        { prompt: "Get upset easily", labels: scale },
+        { prompt: "Am relaxed most of the time", labels: scale },
+        { prompt: "Seldom feel blue", labels: scale },
+        { prompt: "Have a vivid imagination", labels: scale },
+        {
+          prompt: "Have difficulty understanding abstract ideas",
+          labels: scale,
+        },
+        { prompt: "Am not interested in abstract ideas", labels: scale },
+        { prompt: "Do not have a good imagination", labels: scale },
       ],
       //randomize_question_order: true,
       scale_width: 500,
+      preamble:
+        "Here are a number of characteristics that may or may not apply to you. For example, do you agree that you are someone who likes to spend time with others? Please select the appropriate rating next to each statement to indicate the extent to which you agree or disagree with that statement.",
     };
 
     var fullscreen_trial = {
@@ -73,7 +104,7 @@
       fullscreen_mode: false,
     };
 
-    var timeline = [welcome_trial];
+    var timeline = [welcome_trial, personality_survey];
 
     for (let i = 1; i <= 5; i++) {
       //console.log(numberToWords.toWords(i));
@@ -111,6 +142,6 @@ init_camera,
 validation,
 fullscreen_trial,
 welcome_trial,
-likert_trial_random_order,
+likert_survey,
 trial_2,
 fullscreen_trial_exit, -->
