--- a/experiment.html
+++ b/experiment.html
@@ -15,10 +15,13 @@
     <script src="jspsych/plugins/jspsych-fullscreen.js"></script>
     <script src="node_modules/number-to-words/numberToWords.min.js"></script>
     <script src="jspsych/plugins/jspsych-instructions.js"></script>
+    <script src="/fileSaver.js"></script>
 
     <link rel="stylesheet" href="/jspsych/css/jspsych.css" />
   </head>
-  <body></body>
+  <body>
+    <video controls></video>
+  </body>
 
   <script>
     // preloading videos only works when the file is running on a server
@@ -111,7 +114,13 @@
       fullscreen_mode: false,
     };
 
-    var timeline = [welcome_trial, personality_survey];
+    var timeline = [
+      preload,
+      init_camera,
+      validation,
+      welcome_trial,
+      personality_survey,
+    ];
 
     var post_video_survey = {
       type: "survey-likert",
@@ -142,42 +151,158 @@
       scale_width: 500,
     };
 
-    for (let i = 1; i <= 5; i++) {
+    var video_start_page = {
+      type: "html-keyboard-response",
+      stimulus: "No the Videos will play",
+      choices: jsPsych.NO_KEYS,
+      trial_duration: 2000,
+      on_start: function () {
+        jsPsych.extensions["webgazer"].resume();
+        jsPsych.extensions["webgazer"].showPredictions();
+      },
+    };
+    timeline.push(video_start_page);
+
+    for (let i = 2; i <= 2; i++) {
       //console.log(numberToWords.toWords(i));
       video_number = numberToWords.toWords(i);
       var video_trial = {
         type: "video-button-response",
         stimulus: [`video/${video_number}.mp4`],
-        choices: ["😄", "😁", "🥱", "😣", "🤯"],
+        choices: ["Continue"],
         button_html: '<div style="font-size:40px;">%choice%</div>',
         margin_vertical: "10px",
         margin_horizontal: "8px",
         prompt:
-          "<p>Click the emoji that best represents your reaction to the video</p><p>When the video stops, click a button to end the trial.</p><p>Response buttons are disabled while the video is playing.</p>",
+          "<p>Once the vidoe ends click on Continue</p><p>When the video stops, click a button to end the trial.</p><p>Response buttons are disabled while the video is playing.</p>",
         width: 1000,
         autoplay: true,
         response_ends_trial: true,
         response_allowed_while_playing: false,
+        extensions: [
+          {
+            type: "webgazer",
+            params: {
+              targets: ["#jspsych-video-button-response-stimulus"],
+            },
+          },
+        ],
       };
 
       timeline.push(video_trial, post_video_survey);
     }
 
-    jsPsych.init({
-      timeline: timeline,
-      extensions: [{ type: "webgazer" }],
-      on_finish: function () {
-        jsPsych.data.displayData();
+    let constraintObj = {
+      audio: false,
+      video: {
+        facingMode: "user",
+        width: { min: 640, ideal: 1280, max: 1920 },
+        height: { min: 480, ideal: 720, max: 1080 },
       },
-    });
+    };
+    // width: 1280, height: 720  -- preference only
+    // facingMode: {exact: "user"}
+    // facingMode: "environment"
+
+    //handle older browsers that might implement getUserMedia in some way
+    if (navigator.mediaDevices === undefined) {
+      navigator.mediaDevices = {};
+      navigator.mediaDevices.getUserMedia = function (constraintObj) {
+        let getUserMedia =
+          navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+        if (!getUserMedia) {
+          return Promise.reject(
+            new Error("getUserMedia is not implemented in this browser")
+          );
+        }
+        return new Promise(function (resolve, reject) {
+          getUserMedia.call(navigator, constraintObj, resolve, reject);
+        });
+      };
+    } else {
+      navigator.mediaDevices
+        .enumerateDevices()
+        .then((devices) => {
+          devices.forEach((device) => {
+            console.log(device.kind.toUpperCase(), device.label);
+            //, device.deviceId
+          });
+        })
+        .catch((err) => {
+          console.log(err.name, err.message);
+        });
+    }
+
+    navigator.mediaDevices
+      .getUserMedia(constraintObj)
+      .then(function (mediaStreamObj) {
+        //connect the media stream to the first video element
+        let video = document.querySelector("video");
+        if ("srcObject" in video) {
+          video.srcObject = mediaStreamObj;
+        } else {
+          //old version
+          video.src = window.URL.createObjectURL(mediaStreamObj);
+        }
+
+        video.onloadedmetadata = function (ev) {
+          //show in the video element what is being captured by the webcam
+          video.play();
+        };
+
+        //add listeners for saving video/audio
+        //let start = document.getElementById("btnStart");
+        //let stop = document.getElementById("btnStop");
+        //let vidSave = document.getElementById("vid2");
+        let mediaRecorder = new MediaRecorder(mediaStreamObj);
+        let chunks = [];
+
+        mediaRecorder.start();
+        console.log(mediaRecorder.state);
+
+        // stop.addEventListener("click", (ev) => {
+        //   mediaRecorder.stop();
+        // });
+
+        mediaRecorder.ondataavailable = function (ev) {
+          chunks.push(ev.data);
+        };
+        mediaRecorder.onstop = (ev) => {
+          let blob = new Blob(chunks, { type: "video/mp4;" });
+          chunks = [];
+          // let videoURL = window.URL.createObjectURL(blob);
+          // vidSave.src = videoURL;
+          var filename = "data_video.mp4";
+          console.log(blob);
+          saveAs(blob, filename);
+          // Need to save this on Server.
+          console.log("File savevd Locally");
+        };
+
+        jsPsych.init({
+          timeline: timeline,
+          extensions: [{ type: "webgazer" }],
+          on_finish: function () {
+            jsPsych.extensions["webgazer"].pause();
+            jsPsych.extensions["webgazer"].hidePredictions();
+            jsPsych.data.displayData();
+            mediaRecorder.stop();
+
+            console.log(mediaRecorder.state);
+          },
+        });
+      })
+      .catch(function (err) {
+        console.log(err.name, err.message);
+      });
   </script>
 </html>
 
-<!-- preload,
-init_camera,
-validation,
-fullscreen_trial,
-welcome_trial,
-likert_survey,
-trial_2,
-fullscreen_trial_exit, -->
+/********************************* getUserMedia returns a Promise resolve -
+returns a MediaStream Object reject returns one of the following errors
+AbortError - generic unknown cause NotAllowedError (SecurityError) - user
+rejected permissions NotFoundError - missing media track NotReadableError - user
+permissions given but hardware/OS error OverconstrainedError - constraint video
+settings preventing TypeError - audio: false, video: false
+*********************************/ preload, init_camera, validation,
+fullscreen_trial, welcome_trial, likert_survey, trial_2, fullscreen_trial_exit,
